@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<XML_DATA>
+<AAA xmlns:fish="tuna"/>
+<CCC/>
+</XML_DATA>
+
