@@ -89,6 +89,7 @@ EXTRA_DIST = \
     bug-83.out bug-83.xsl \
     bug-84.out bug-84.xsl \
     bug-86.out bug-86.xsl \
+    bug-87.out bug-87.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
