@@ -1,3 +1,13 @@
+Tue Jul  2 00:02:53 CEST 2002 Daniel Veillard <daniel@veillard.com>
+
+	* tests/docs/Makefile.am tests/docs/bug-87.xml
+	  tests/general/Makefile.am tests/general/bug-87.*: added a
+	  example in the regression tests for a case where the XML
+	  default namespace was missing from the namespace axis
+	* xsltproc/xsltproc.c: added the informations that parameter
+	  strings are expected to be UTF8
+	* libxslt/attributes.c: fixes on attribute group implementation
+
 Sat Jun 29 21:12:14 MDT 2002 John Fleck <jfleck@inkstain.net>
 
 	* doc/xsltproc.xml, doc/xsltproc.html/, doc/xsltproc.1
